Finalized the game and moved the whole project to the root directory.

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -73,7 +73,9 @@ li {
   border-radius: 4px;
 }
 
-
+.score-display {
+  width: 100px;
+}
 
 .controls {
     display: flex;
@@ -90,3 +92,7 @@ li {
     margin: 10px;
   }
   
+
+  
+   
+
